--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
 # Core Dependencies
+# Python 3.8.15 required
 apache-airflow>=2.5.0
 google-cloud-storage>=2.10.0
 google-cloud-dataproc>=3.0.0
-pyspark>=3.3.0
+pyspark==3.1.3
 
 # Image Processing
-Pillow>=9.5.0
-opencv-python>=4.7.0
-numpy>=1.24.0
+Pillow==9.5.0
+opencv-python==4.8.0.74
+numpy==1.23.5
 
 # Machine Learning
-tensorflow>=2.12.0
+tensorflow==2.13.1
 pandas>=2.0.0
 pyarrow>=12.0.0
 
 # Configuration
-pyyaml>=6.0
+pyyaml==6.0.1
 python-dotenv>=1.0.0
 
 # Utilities
@@ -24,8 +25,5 @@ google-auth>=2.17.0
 google-auth-oauthlib>=1.0.0
 google-auth-httplib2>=0.1.0
 
-# Development (optional)
-pytest>=7.3.0
-black>=23.3.0
-flake8>=6.0.0
+
 
